force-app/main/default/objects/Bed_Inventory__c/Bed_Inventory__c.object-meta.xml
<CustomObject>
    <label>Bed Inventory</label>
    <nameField>
        <label>Bed Inventory</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beds Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>