force-app/main/default/objects/Bed_Inventory__c/fields/Assigned_Patient__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ICU_Bed_Management</relationshipName>
    <type>Lookup</type>
</CustomField>