force-app/main/default/objects/Bed_Inventory__c/fields/Bed_Number__c.field-meta.xml
<CustomField>
    <fullName>Bed_Number__c</fullName>
    <description>ICU101, ICU102</description>
    <label>Bed Number</label>
    <length>23</length>
    <type>Text</type>
</CustomField>