force-app/main/default/objects/Bed_Inventory__c/fields/Cost_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Day__c</fullName>
    <label>Cost Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>