force-app/main/default/objects/Bed_Inventory__c/fields/IoT_Enabled__c.field-meta.xml
<CustomField>
    <fullName>IoT_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IoT Enabled</label>
    <type>Checkbox</type>
</CustomField>