force-app/main/default/objects/Bed_Inventory__c/fields/Power_State__c.field-meta.xml
<CustomField>
    <fullName>Power_State__c</fullName>
    <label>Power State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>