force-app/main/default/objects/Bed_Inventory__c/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ward</label>
    <referenceTo>Ward__c</referenceTo>
    <relationshipLabel>Beds Inventory</relationshipLabel>
    <relationshipName>Beds_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>